_sass/_header.scss
// header

.styleguide-site-header {
    background-color: $white;
    color: $slate500;
    padding: $tubby-unit 4vw;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
}
.styleguide-home-link {
    font-size: 1rem;
    font-weight: normal;
    &:hover,
    &:focus {
        text-decoration: none;
    }
}
.styleguide-logo {
    display: block;
    svg {
        width: auto;
        height: $tubby-unit + $tubby-unit/2;
        fill: $black;

    }
}
.styleguide-tagline {
    display: none;
}
.styleguide-icon--burger,
.styleguide-icon--search,
.styleguide-icon--cancel {
    fill: $black;
    width: $tubby-unit;
}

@media (min-width: $bp-medium) {

    .styleguide-site-header {
        position: static;
    }
    .styleguide-home-link {
        font-size: 1.2rem;
        display: flex;
        flex-wrap: wrap;
        align-items: center;
    }
    .styleguide-logo {
        padding-right: $tubby-unit;
    }
    .styleguide-tagline {
        align-self: flex-start;
        display: block;
        border-left: 1px solid currentColor;
        padding-left: $tubby-unit;
    }
    .styleguide-menu-toggle {
        display: none;
    }

}

@media (min-width: $bp-large) {

    // header
    .styleguide-home-link {
        font-size: 1.6rem;
    }

}

